# rust-web-crawler

./: .gitignore  Cargo.toml  README.md  crawled_data_Test.csv  report.md  test.csv
rust-web-crawler/data/: index.json
rust-web-crawler/src/: crawler.rs  keywords.rs  parser.rs  url_utils.rs
src/: crawler.rs  indexer.rs  keywords.rs  main.rs  parser.rs  query.rs  robots.rs  storage.rs  url_utils.rs
web-crawler/: Cargo.toml
web-crawler/src/: crawler.rs  indexer.rs  keywords.rs  main.rs  parser.rs  query.rs  robots.rs  storage.rs  url_utils.rs
