[package]
name = "fs_search_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Networking & Async
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
tokio = { version = "1", features = ["full"] }

# HTML parsing & URL handling
scraper = "0.19"
url = "2.5"
texting_robots = "0.2"

# Serialization & filesystem
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"

# Text processing & indexing
stop-words = "0.8.0"

# CLI
clap = { version = "4.1", features = ["derive"] }

# Utility
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
csv = "1.3.1"
